<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryCreateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/diaryCreate_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/diaryCreate_scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="24dp"
                android:id="@+id/diary_Form">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diary_prompt_title"/>
                <EditText
                    android:id="@+id/editText_diary_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/diary_prompt_title_placeholder" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diary_prompt_description"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/diary_prompt_description_placeholder"
                        android:id="@+id/editText_diary_description"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/diary_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/diary_Form"
                android:layout_marginHorizontal="24dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diary_prompt_timeDate" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diary_prompt_timeDate_placeholder" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diary_prompt_location" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diary_prompt_location_placeholder" />
                </LinearLayout>

                <Space
                    android:layout_width="24dp"
                    android:layout_height="match_parent" />

                <ImageButton
                    android:id="@+id/imageButton_previewDiaryMedia"
                    android:layout_width="320px"
                    android:layout_height="630px"
                    android:background="@color/black"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_baseline_image_24" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/diaryCreate_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorPrimaryContainer"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/title_activity_diaryCreate"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:layout_margin="24dp"
        android:id="@+id/diaryCreate_actionButtons">

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Publish" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>